[gd_scene load_steps=8 format=2]

[ext_resource path="res://widgets/GameUI.gd" type="Script" id=1]
[ext_resource path="res://assets/camtatz/Buttons/BTN_ORANGE_CIRCLE_OUT.png" type="Texture" id=2]
[ext_resource path="res://assets/camtatz/Buttons/BTN_ORANGE_CIRCLE_IN.png" type="Texture" id=3]
[ext_resource path="res://assets/camtatz/Symbols & Text/SYMB_REPLAY.png" type="Texture" id=4]
[ext_resource path="res://assets/camtatz/Symbols & Text/SYMB_X.png" type="Texture" id=5]
[ext_resource path="res://assets/camtatz/Buttons/BTN_RED_CIRCLE_IN.png" type="Texture" id=6]
[ext_resource path="res://assets/camtatz/Buttons/BTN_RED_CIRCLE_OUT.png" type="Texture" id=7]

[node name="GameUI" type="Control"]
anchor_right = 1.0
mouse_filter = 1
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 70.0
mouse_filter = 1
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 390.0
margin_bottom = 70.0

[node name="Back2" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/Back2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Back2/CenterContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="LevelLabel" type="Label" parent="MarginContainer/HBoxContainer"]
margin_left = 64.0
margin_top = 46.0
margin_right = 316.0
margin_bottom = 60.0
size_flags_horizontal = 3
size_flags_vertical = 8
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Restart2" type="TextureButton" parent="MarginContainer/HBoxContainer"]
margin_left = 320.0
margin_right = 380.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer/Restart2"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/Restart2/CenterContainer"]
margin_left = 15.0
margin_top = 15.0
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 5

[connection signal="pressed" from="MarginContainer/HBoxContainer/Back2" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Restart2" to="." method="_on_Restart_pressed"]
